# fmriprep

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  CHANGES.rst  Dockerfile  Dockerfile.base  Dockerfile_devel  LICENSE  MANIFEST.in  Makefile  NOTICE  README.rst  REFERENCES.md  constraints.txt  env.yml  long_description.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  versioneer.py
.circleci/: config.yml  ds005_bids_fasttrack_outputs.txt  ds005_bids_outputs.txt  ds005_fasttrack_outputs.txt  ds005_legacy_fasttrack_outputs.txt  ds005_legacy_outputs.txt  ds005_legacy_partial_fasttrack_outputs.txt  ds005_legacy_partial_outputs.txt  ds005_outputs.txt  ds005_partial_fasttrack_outputs.txt  ds005_partial_outputs.txt  ds054_fasttrack_outputs.txt  ds054_outputs.txt  ds210_fasttrack_outputs.txt  ds210_outputs.txt
.github/: config.yml
.github/workflows/: contrib.yml  docker.yml  pixi-lock.yml  pre-release.yml  stable.yml  test.yml
.maint/: CONTRIBUTORS.md  MAINTAINERS.md  PIs.md  contributors.json  paper_author_list.py  update_authors.py  update_zenodo.py
docker/files/: environment.yml  freesurfer7.2-exclude.txt  freesurfer7.3.2-exclude.txt  repo-anaconda-com-chain.pem
docs/: conf.py  faq.rst  index.rst  installation.rst  license.rst  outputs.rst  spaces.rst  usage.rst  workflows.rst
docs/_static/SampleReport/: sample_report.html
docs/sphinxext/: github_link.py
fmriprep/: __about__.py  __init__.py  __main__.py  _version.py  _warnings.py  config.py  conftest.py
fmriprep/cli/: parser.py  run.py  version.py  workflow.py
fmriprep/cli/tests/: test_parser.py  test_version.py
fmriprep/data/: NOTICE  __init__.py  boilerplate.bib  fmap_spec.json  io_spec.json  reports-spec-anat.yml  reports-spec-func.yml  reports-spec.yml
fmriprep/data/tests/: config.toml
fmriprep/interfaces/: bids.py  confounds.py  conftest.py  denoise.py  gifti.py  maths.py  metric.py  multiecho.py  nitransforms.py  nordic.py  patches.py  reports.py  resampling.py  workbench.py
fmriprep/interfaces/tests/: test_bids.py  test_confounds.py  test_nitransforms.py  test_reports.py
fmriprep/interfaces/tests/data/: __init__.py  sub-01_task-mixedgamblestask_run-01_desc-motion_timeseries.tsv
fmriprep/reports/: conftest.py  core.py
fmriprep/reports/tests/: test_reports.py
fmriprep/tests/: test_config.py  test_fsl6.py
fmriprep/utils/: asynctools.py  bids.py  confounds.py  meepi.py  misc.py  sentry.py  telemetry.py  testing.py  transforms.py
fmriprep/utils/tests/: test_derivative_cache.py
fmriprep/workflows/: anatomical.py  base.py  tests.py
fmriprep/workflows/bold/: __init__.py  apply.py  base.py  confounds.py  denoise.py  fit.py  hmc.py  nordic.py  outputs.py  reference.py  registration.py  resampling.py  stc.py  t2s.py
fmriprep/workflows/bold/tests/: test_base.py  test_confounds.py  test_fit.py
fmriprep/workflows/tests/: __init__.py  layouts.py  test_base.py
scripts/: fetch_templates.py
wrapper/: LICENSE  fmriprep_docker.py  pyproject.toml
wrapper/src/fmriprep_docker/: __main__.py
